set button to border: none and added border radius

--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ button {
   color: #fff;
   padding: 1rem;
   margin-top: 1.5rem;
+  border: none;
+  border-radius: 5px;
 }
 
 @media (max-width: 800px) {
